--- a/src/index.css
+++ b/src/index.css
@@ -97,11 +97,14 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 main {
   padding-top: 68px;
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 h1,
